--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "next": "15.5.2",
     "next-auth": "^4.24.11",
+    "openai": "^5.20.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-infinite-scroll-component": "^6.1.0"
